Mejoras a la estructura del template. Cambios en los tipos de datos. Mejorar forma de eliminar un gasto.

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ng-she-workshop"
+    }
+  },
+  "defaultProject": "ng-she-workshop",
+  "cli": {
+    "analytics": false
+  }
 }
